--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>The first check, to Check old page</title>
+		<title>P. Saavedra's Personal Website</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -9,37 +9,26 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+	        	<li><a class="external-link" href="#project">Projects</a></li>
+        		<li><a class="external-link" href="#peer-reviewed-articles">Publications</a></li>
+        		<li><a class="external-link" href="#talks">Conferences</a></li>
+			<li><a class="external-link" href="#field-experiments">Field Experiments</a></li>
+			<li><a class="external-link" href="#other-stuff"><strong>Miscellaneous</strong></a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>My Personal WebSite</h1>
-			<h2>Pablo Saavedra Garfias</h2>
+        		<h1>My Personal WebSite</h1>			
 				<p>A simple approach to share my work <em>Some Science</em> Lot of enthusiasm. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:pablosaa@uni-bonn.de">email</a></li>
-        		<li><a href="https://github.com/pablosaa">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/pablosaa">github.com/pablosaa</a></li>
 			</ul>
 		</footer>
 		
-		<table class="plain">
-<tbody>
-<tr>
-<td><a class="external-link" href="#project"><strong>&nbsp;Project</strong></a></td>
-<td><a class="external-link" href="#peer-reviewed-articles"><strong>&nbsp;Publications</strong></a></td>
-<td><a class="external-link" href="#talks"><strong>Talks&nbsp;</strong></a></td>
-<td><strong>&nbsp;</strong><a class="external-link" href="#posters"><strong>Posters</strong></a></td>
-<td><a class="external-link" href="#field-experiments"><strong>Field Experiments&nbsp;</strong></a></td>
-<td><a class="external-link" href="#other-stuff"><strong>Miscellaneous</strong></a></td>
-</tr>
-</tbody>
-</table>
 <h2><strong> </strong><strong> </strong></h2>
 <table class="invisible">
 <tbody>
