--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@ title: Pablo Saavedra's personal website
 ---
 <div class="blurb">
 	<h1>Hi there, Welcome to my personal WebSite!</h1>
-	<p>I'm a research scientist at the <em>University of Bonn</em> Here more information: <a href="/about">Read more about my life...</a></p>
+	I'm a research scientist at the [*University of Bonn*](http://uni-bonn.de/ "Alma Mater")
+	<p>Here more information: <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
