--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 layout: default
 title: Pablo Saavedra's personal website
 ---
-<div class="blurb">
-	<h1>Hi there, Welcome to my personal WebSite!</h1>
-	I'm a research scientist at the [*University of Bonn*](http://uni-bonn.de/ "Alma Mater")
-	<p>Here more information: <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<div style="width:22%;height:auto;display:inline-block; white-space:nowrap;">
+<img src="{{site.baseurl}}/images/fronts/pab_bild.png" alt="Portrait" style="width:auto;height:200px;margin-right:20px;margin-top:5px;margin-bottom:20px;">
+</div>
+<div style="width:50%;height:auto;display:inline-block; white-space:nowrap;text-align:left;vertical-align:top;">
+{% include welcome_en.md %}
+</div><br/>
+<center>
+<nav class="mainmenu">
+	<ul style="align:center;">
+		<li><a href="{{site.baseurl}}/projects"><button  class="fa fa-science"><span>Science</span></button></a></li>
+		<li><a href="{{site.baseurl}}/codes"><button  class="fa fa-coding"><span>Coding</span></button></a></li>
+		<li><a href="{{site.baseurl}}/portfolio"><button class="fa fa-portfolio"><span>Portfolio</span></button></a></li>
+		<li><a href="{{site.baseurl}}/about"><button  class="fa fa-about"><span>About</span></button></a></li>
+	</ul>
+</nav>
+</center>
+<p style="height:50px;">
+</p>
