--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Pablo Saavedra's personal website
 ---
 <div style="width:22%;height:auto;display:inline-block; white-space:nowrap;">
-<img src="{{site.baseurl}}/images/fronts/pab_bild.png" alt="Portrait" style="width:auto;height:200px;margin-right:20px;margin-top:5px;margin-bottom:20px;">
+<img src="{{site.baseurl}}/images/fronts/pab_bild.png" alt="Portrait" style="width:95%;height:auto;margin-right:20px;margin-top:5px;margin-bottom:20px;">
 </div>
 <div style="width:50%;height:auto;display:inline-block; white-space:nowrap;text-align:left;vertical-align:top;">
 {% include welcome_en.md %}
@@ -18,5 +18,5 @@ title: Pablo Saavedra's personal website
 	</ul>
 </nav>
 </center>
-<p style="height:50px;">
+<p style="height:5%;">
 </p>
