fixing about.md and mainpage wrapping

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Pablo Saavedra's personal website
 <div style="width:22%;height:auto;display:inline-block; white-space:nowrap;">
 <img src="{{site.baseurl}}/images/fronts/pab_bild.png" alt="Portrait" style="width:95%;height:auto;margin-right:20px;margin-top:5px;margin-bottom:20px;">
 </div>
-<div style="width:50%;height:auto;display:inline-block; white-space:nowrap;text-align:left;vertical-align:top;">
+<div style="width:50%;height:auto;display:inline-block; white-space:pre-line;text-align:left;vertical-align:top;">
 {% include welcome_en.md %}
 </div><br/>
 <center>
