add menu items and journals list peer-review

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ title: Pablo Saavedra's personal website
 <center>
 <nav class="mainmenu">
 	<ul style="align:center;">
-		<li><a href="{{site.baseurl}}/projects"><button  class="fa fa-science"><span>Science</span></button></a></li>
-		<li><a href="{{site.baseurl}}/codes"><button  class="fa fa-coding"><span>Coding</span></button></a></li>
-		<li><a href="{{site.baseurl}}/portfolio"><button class="fa fa-portfolio"><span>Portfolio</span></button></a></li>
-		<li><a href="{{site.baseurl}}/about"><button  class="fa fa-about"><span>About</span></button></a></li>
+		<li><a href="projects"><button  class="fa fa-science"><span>Science</span></button></a></li>
+		<li><a href="codes"><button  class="fa fa-coding"><span>Coding</span></button></a></li>
+		<li><a href="portfolio"><button class="fa fa-portfolio"><span>Portfolio</span></button></a></li>
+		<li><a href="about"><button  class="fa fa-about"><span>About</span></button></a></li>
 	</ul>
 </nav>
 </center>
