--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@ caratula: images/fronts/texstudio.png
 
 <h3 name="peer-reviewed-articles">Peer Reviewed Publications:</h3>
 <ul><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, and C. Simmer </strong>: <em>An Octave/MATLAB Interface For Rapid Processing SMOS Full Polarization Brightness Temperature Dataset</em>, Journal of Open Research Software (JORS) <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">submitted</a>, 2017, doi: 10.5067/xxx.</p>
+<p class="discreet"><strong><u>Saavedra P.</u>, and C. Simmer </strong>: <em>An Octave/MATLAB Interface For Rapid Processing SMOS Full Polarization Brightness Temperature Dataset</em>, Journal of Open Research Software (JORS) <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">under work after reviewed with minor revisions</a>, 2017, doi: 10.5067/xxx.</p>
 </li><li>
 <p class="discreet"><strong>Schalge B., J. Rihani, G. Baroni, D. Erdal, G. Geppert, V. Haefliger, B. Haese, <u>P. Saavedra</u>, I. Neuweiler, H.J. Hendricks, F. Ament, S. Attinger, O.A. Cirpka, S. Kollet, H. Kunstmann, H. Vereecken, and C. Simmer</strong>: <em>High-Resolution Virtual Catchment Simulations of the Subsurface-Land Surface-Atmosphere System</em>, Submitted to Hydrology and Earth System Sciences (HESS), 2016.</p>
 </li><li>
