added ORCID to About page, plus few text adjustments

--- a/publications.html
+++ b/publications.html
@@ -8,9 +8,9 @@ caratula: images/fronts/texstudio.png
 
 <h3 name="peer-reviewed-articles">Peer Reviewed Publications:</h3>
 <ul><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, and C. Simmer </strong>: <em>An Octave/MATLAB Interface For Rapid Processing SMOS Full Polarization Brightness Temperature Dataset</em>, Journal of Open Research Software (JORS) <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">under work after reviewed with minor revisions</a>, 2017, doi: 10.5067/xxx.</p>
+<p class="discreet"><strong><u>Saavedra P.</u>, and C. Simmer </strong>: <em>An Octave/MATLAB Interface For Rapid Processing SMOS L1C Full Polarization Brightness Temperature</em>, Journal of Open Research Software (JORS) <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">in press</a>, 2017, doi: 10.5067/xxx.</p>
 </li><li>
-<p class="discreet"><strong>Schalge B., J. Rihani, G. Baroni, D. Erdal, G. Geppert, V. Haefliger, B. Haese, <u>P. Saavedra</u>, I. Neuweiler, H.J. Hendricks, F. Ament, S. Attinger, O.A. Cirpka, S. Kollet, H. Kunstmann, H. Vereecken, and C. Simmer</strong>: <em>High-Resolution Virtual Catchment Simulations of the Subsurface-Land Surface-Atmosphere System</em>, Submitted to Hydrology and Earth System Sciences (HESS), 2016.</p>
+<p class="discreet"><strong>Schalge B., J. Rihani, G. Baroni, D. Erdal, G. Geppert, V. Haefliger, B. Haese, <u>P. Saavedra</u>, I. Neuweiler, H.J. Hendricks, F. Ament, S. Attinger, O.A. Cirpka, S. Kollet, H. Kunstmann, H. Vereecken, and C. Simmer</strong>: <em>High-Resolution Virtual Catchment Simulations of the Subsurface-Land Surface-Atmosphere System</em>, Under preparation, 2017.</p>
 </li><li>
 <p class="discreet"><strong>Xie X., Evaristo R., Troemel S., <u>Saavedra P.</u> and C. Simmer</strong>: <em>Radar observation of evaporation and implications for rainfall precipitation and cooling rate estimation</em>, J. Atmos. Ocea. Tech., 2016, doi:10.1175/JTECH-D-15-0244.1.</p>
 </li><li>
