trying css background image

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@ title: Pablo Saavedra's personal website
 	</ul>
 </nav>
 </center>
-<p style="height:5%;">
+<!-- <p style="height:5%;">
 </p>
+-->
