Shaoning paper included
link to HESS discussion paper included

--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,8 @@ caratula: images/fronts/texstudio.png
 
 <h3 name="peer-reviewed-articles">Peer Reviewed Publications:</h3>
 <ul><li>
+<p class="discreet"><strong>Lv Sh., Schalge B., <u>Saavedra Garfias P.</u>, and C. Simmer</strong>: <em>Required sampling-density of ground-based soil moisture and brightness temperature observations for calibration/validation of L-band satellite observations based on a virtual reality</em>,Journal Hydrology and Earth System Sciences (HESS), <a href="https://www.hydrol-earth-syst-sci-discuss.net/hess-2019-192/">Discussion paper</a></p>
+</li><li> 
 <p class="discreet"><strong>Schalge B., J. Rihani, G. Baroni, D. Erdal, G. Geppert, V. Haefliger, B. Haese, <u>P. Saavedra</u>, I. Neuweiler, H.J. Hendricks, F. Ament, S. Attinger, O.A. Cirpka, S. Kollet, H. Kunstmann, H. Vereecken, and C. Simmer</strong>: <em>High-Resolution Virtual Catchment Simulations of the Subsurface-Land Surface-Atmosphere System</em>, submitted to Geoscientific Model Development (GMD), gmd-2018-79, 2018.</p>
 </li><li>
 <p class="discreet"><strong><u>Saavedra P.</u>, and C. Simmer </strong>: <em>An Octave/MATLAB Interface For Rapid Processing SMOS L1C Full Polarization Brightness Temperature</em>, Journal of Open Research Software <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">(JORS)</a>, 6(1) p.2., 2018, doi:<a href="http://doi.org/10.5334/jors.165">doi.org/10.5334/jors.165</a></p>
