Link for GPM database updated
The link for GPM database paper corrected and updated with the doi:

--- a/publications.html
+++ b/publications.html
@@ -16,7 +16,7 @@ caratula: images/fronts/texstudio.png
 </li><li>
 <p class="discreet"><strong>Xie X., Evaristo R., Troemel S., <u>Saavedra P.</u> and C. Simmer</strong>: <em>Radar observation of evaporation and implications for rainfall precipitation and cooling rate estimation</em>, J. Atmos. Ocea. Tech., 2016, doi:10.1175/JTECH-D-15-0244.1.</p>
 </li><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, and A. Battaglia </strong>: <em>GPM Ground Validation Advanced Microwave Radiometer Rain Identification (ADMIRARI) GCPEx</em>, Dataset from the NASA EOSDIS Global Hydrology Resource Center Distributed Active Archive Center Huntsville, Alabama, U.S.A., <a title="GCPEx on-line database" href="http://ghrc.nssstc.nasa.gov">on-line</a>, 2012, doi: 10.5067/GPMGV/GCPEX/ADMIRARI/DATA201.</p>
+<p class="discreet"><strong><u>Saavedra P.</u>, and A. Battaglia </strong>: <em>GPM Ground Validation Advanced Microwave Radiometer Rain Identification (ADMIRARI) GCPEx</em>, Dataset from the NASA EOSDIS Global Hydrology Resource Center Distributed Active Archive Center Huntsville, Alabama, U.S.A., <a title="GCPEx on-line database" href="http://dx.doi.org/10.5067/GPMGV/GCPEX/ADMIRARI/DATA201">on-line</a>, 2012, doi: 10.5067/GPMGV/GCPEX/ADMIRARI/DATA201.</p>
 </li><li>
 <p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A. and C. Simmer</strong>: <em>Partitioning of cloud water and rain water content by ground-based observations with the Advanced Microwave Radiometer for Rain Identification (ADMIRARI) in synergy with a micro rain radar</em>, JGR, Atmosphere, 2011, 117,D05203,doi:10.1029/2011JD016382.</p>
 </li><li>
