--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Pablo Saavedra's personal website
 ---
 <div style="width:22%;height:auto;display:inline-block; white-space:nowrap;">
-<img src="{{site.baseurl}}/images/fronts/pab_bild.png" alt="Portrait" style="width:95%;height:auto;margin-right:20px;margin-top:5px;margin-bottom:20px;">
+<img src="{{'/images/fronts/pab_bild.png' | relative_url}}" alt="Portrait" style="width:95%;height:auto;margin-right:20px;margin-top:5px;margin-bottom:20px;">
 </div>
 <div style="width:70%;height:auto;display:inline-block; white-space:none;text-align:left;vertical-align:top;">
 {% include welcome_en.md %}
