add AGU 2019 links in Conferences

--- a/conferences.html
+++ b/conferences.html
@@ -2,7 +2,7 @@
 layout: withcaratula
 page: conferences
 title: Conference contributions
-vorworte: Most of conferences I have taken part as resercher in Germany.
+vorworte: Main contributions as resercher working in Germany and Norway.
 caratula: images/fronts/agumeet.png
 ---
 
@@ -36,6 +36,10 @@ caratula: images/fronts/agumeet.png
 
 <h3><a name="posters"></a>Posters:</h3>
 <ul><li>
+<p class="discreet"><strong>American Geophysical Union AGU 2019</strong>, 9-13 December 2019, San Francisco, USA<br /><strong>Pejcic V., Saavedra Garfias P., Troemel S., Mühlbauer K., and C. Simmer</strong>: <em>Evaluation of Germany's network radar composite rain producs with GPM near surface precipitation estimations. (<a title="ESSOAr link" class="external-link" href="https://doi.org/10.1002/essoar.10501387.1">Pre-print</a>)</em></p>
+</li><li>
+<p class="discreet"><strong>American Geophysical Union AGU 2019</strong>, 9-13 December 2019, San Francisco, USA<br /><strong>Saavedra Garfias P., and J. Reuder</strong>: <em>Uncertainties characterization of tropospheric profile retrieval by Bayesian inversion as compared to state-of-the-art methods from ground-based microwave radiometry. (<a title="ESSOAr link" class="external-link" href="https://doi.org/10.1002/essoar.10501335.2">Pre-print</a>)</em></p>
+</li><li>
 <p class="discreet"><strong>European Geosciences Union EGU 2017</strong>, 23-28 April 2017, Vienna, Austria<br /><strong>Saavedra P., and C. Simmer</strong>: <em>Satellite Brightness Temperatures simulator for high-resolution virtual catchment. (<a title="poster_egu.pdf" class="internal-link" href="{{site.PDFmiub}}/posters/poster_egu.pdf">PDF</a>)</em></p>
 </li><li>
 <p class="discreet"><strong>IRS 2016</strong>, 16-22 April 2016, Auckland, New Zealand<br /><strong>Saavedra P.</strong>: <em>Anomalous Increasing Effect on UV Radiation by Cloudiness at a High Altitude Observatory.(<a title="PSaavedra_irs2016.pdf" class="internal-link" href="{{site.PDFmiub}}/posters/PSaavedra_irs2016.pdf">PDF</a>)</em></p>
