--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@ caratula: images/fronts/texstudio.png
 </li></ul>
 <h3 name="theses">Theses:</h3>
 <ul>
-  <li><b>Doctoral.</b> Title: <em>"Retrieval of cloud and rainwater from ground-based passive microwave observations with the multi-frequency dual-polarized radiometer ADMIRARI"</em>, Faculty of Mathematical and Natural Sciences, University of Bonn, Germany. (<a title="L. Bibliothek Uni Bonn" href="http://hss.ulb.uni-bonn.de/2015/3941/3941.htm" target="_blank">HTML</a>)</li>
+  <li><b>Doctoral.</b> Title: <em>"Retrieval of cloud and rainwater from ground-based passive microwave observations with the multi-frequency dual-polarized radiometer ADMIRARI"</em>, Faculty of Mathematical and Natural Sciences, University of Bonn, Germany. (<a title="L. Bibliothek Uni Bonn" href="https://nbn-resolving.org/urn:nbn:de:hbz:5n-39415" target="_blank">HTML</a>)</li>
   <li><b>Diploma.</b> Title: <em>"Diseño y construcción de un instrumento de deteccion de nubosidad para el estudio de los efectos de la radiación UV"</em> (in spanish), Facultad de Ciencias Puras y Naturales, Universidad Mayor de San Andres, Bolivia.</li>
 </ul>
 <br />
