cotur paper added

--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,15 @@ caratula: images/fronts/texstudio.png
 
 <h3 name="peer-reviewed-articles">Peer Reviewed Publications:</h3>
 <ul><li>
-<p class="discreet"><strong>Pejcic V., <u>Saavedra Garfias P.</u>, Mühlbauer K., Trömel S., and C. Simmer</strong>: <em>Comparison between precipitation estimates of ground-based weather radar composites and GPM’s DPR rainfall product over Germany</em>,Meteorologische Zeitschrift (METZ), <em>07, 2020. </em><a href="http://dx.doi.org/10.1127/metz/2020/1039">doi:10.1127/metz/2020/1039</a></p>
+    <p class="discreet">
+      <strong>Etienne Cheynet, Martin Flügge, Joachim Reuder, Jasna B. Jakobsen, Yngve Heggelund, Benny Svardal, <u>Pablo Saavedra Garfias</u>, Charlotte Obhrai, Nicolò Daniotti, Jarle Berge, Christiane Duscha, Norman Wildmann, Ingrid Husøy Onarheim, and Marte Godvik</strong>:
+      <em>The COTUR project: Remote sensing of offshore turbulence for wind energy application</em>,
+      Atmospheric Measurement Techniques (AMT), <em>12, 2020. </em><a href="https://www.atmospheric-measurement-techniques.net">amt-2020-511</a>
+    </p>
+  </li><li>
+    <p class="discreet"><strong>Pejcic V., <u>Saavedra Garfias P.</u>, Mühlbauer K., Trömel S., and C. Simmer</strong>:
+      <em>Comparison between precipitation estimates of ground-based weather radar composites and GPM’s DPR rainfall product over Germany</em>,
+      Meteorologische Zeitschrift (METZ), <em>07, 2020. </em><a href="http://dx.doi.org/10.1127/metz/2020/1039">doi:10.1127/metz/2020/1039</a></p>
 </li><li>
 <p class="discreet"><strong>Lv Sh., Schalge B., <u>Saavedra Garfias P.</u>, and C. Simmer</strong>: <em>Required sampling-density of ground-based soil moisture and brightness temperature observations for calibration/validation of L-band satellite observations based on a virtual reality</em>,Journal Hydrology and Earth System Sciences (HESS), <a href="https://www.hydrol-earth-syst-sci.net/24/1957/2020/">doi.org/10.5194/hess-24-1957-2020</a></p>
 </li><li>
