major changes on codes, added publication, fix about

--- a/conferences.html
+++ b/conferences.html
@@ -2,7 +2,7 @@
 layout: withcaratula
 page: conferences
 title: Conference contributions
-vorworte: Main contributions as resercher working in Germany and Norway.
+vorworte: Contributions to Conference and Symposium
 caratula: images/fronts/agumeet.png
 ---
 
