--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Pablo Saavedra's personal website
+title: Pablo Saavedra Garfias's personal website
 ---
 <div style="width:22%;height:auto;display:inline-block; white-space:nowrap;">
 <img src="{{'images/fronts/pab_bild_nopin.png'}}" alt="Portrait" style="width:95%;height:auto;margin-right:20px;margin-top:5px;margin-bottom:20px;">
