--- a/publications.html
+++ b/publications.html
@@ -2,11 +2,10 @@
 layout: withcaratula
 page: publications
 title: List of Publications
-vorworte: Scientific material I have contributed for publishing in journals and conference proceedings.
-caratula: images/fronts/texstudio.png
+<! -- vorworte: Scientific material I have contributed for publishing in journals and conference proceedings. -->
 ---
 
-<h3 name="peer-reviewed-articles">Peer Reviewed Publications:</h3>
+<h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
 <ul><li>
     <p class="discreet">
       <strong>Etienne Cheynet, Martin Flügge, Joachim Reuder, Jasna B. Jakobsen, Yngve Heggelund, Benny Svardal, <u>Pablo Saavedra Garfias</u>, Charlotte Obhrai, Nicolò Daniotti, Jarle Berge, Christiane Duscha, Norman Wildmann, Ingrid Husøy Onarheim, and Marte Godvik</strong>:
@@ -16,15 +15,28 @@ caratula: images/fronts/texstudio.png
   </li><li>
     <p class="discreet"><strong>Pejcic V., <u>Saavedra Garfias P.</u>, Mühlbauer K., Trömel S., and C. Simmer</strong>:
       <em>Comparison between precipitation estimates of ground-based weather radar composites and GPM’s DPR rainfall product over Germany</em>,
-      Meteorologische Zeitschrift (METZ), <em>07, 2020. </em><a href="http://dx.doi.org/10.1127/metz/2020/1039">doi:10.1127/metz/2020/1039</a></p>
+      Meteorologische Zeitschrift (METZ), <em>07, 2020. </em><a href="http://dx.doi.org/10.1127/metz/2020/1039">doi:10.1127/metz/2020/1039</a>
+    </p>
 </li><li>
-<p class="discreet"><strong>Lv Sh., Schalge B., <u>Saavedra Garfias P.</u>, and C. Simmer</strong>: <em>Required sampling-density of ground-based soil moisture and brightness temperature observations for calibration/validation of L-band satellite observations based on a virtual reality</em>,Journal Hydrology and Earth System Sciences (HESS), <a href="https://www.hydrol-earth-syst-sci.net/24/1957/2020/">doi.org/10.5194/hess-24-1957-2020</a></p>
+    <p class="discreet"><strong>Lv Sh., Schalge B., <u>Saavedra Garfias P.</u>, and C. Simmer</strong>:
+      <em>Required sampling-density of ground-based soil moisture and brightness temperature observations for calibration/validation of L-band satellite observations based on a virtual reality</em>,
+      Journal Hydrology and Earth System Sciences (HESS), <a href="https://www.hydrol-earth-syst-sci.net/24/1957/2020/">doi.org/10.5194/hess-24-1957-2020</a>
+    </p>
 </li><li>
-<p class="discreet"><strong>Schalge B., J. Rihani, G. Baroni, D. Erdal, G. Geppert, V. Haefliger, B. Haese, <u>P. Saavedra</u>, I. Neuweiler, H.J. Hendricks, F. Ament, S. Attinger, O.A. Cirpka, S. Kollet, H. Kunstmann, H. Vereecken, and C. Simmer</strong>: <em>Presentation and discussion of the high resolution atmosphere-land surface subsurface simulation dataset of the virtual Neckar catchment for the period 2007–2015</em>, Earth Syst. Sci. Data Discuss., doi:<a href="https://doi.org/10.5194/essd-2020-24">10.5194/essd-2020-24</a>, in review, 2020.</p>
+    <p class="discreet"><strong>Schalge B., J. Rihani, G. Baroni, D. Erdal, G. Geppert, V. Haefliger, B. Haese, <u>P. Saavedra</u>, I. Neuweiler, H.J. Hendricks, F. Ament, S. Attinger, O.A. Cirpka, S. Kollet, H. Kunstmann, H. Vereecken, and C. Simmer</strong>:
+      <em>Presentation and discussion of the high resolution atmosphere-land surface subsurface simulation dataset of the virtual Neckar catchment for the period 2007–2015</em>,
+      Earth Syst. Sci. Data Discuss., doi:<a href="https://doi.org/10.5194/essd-2020-24">10.5194/essd-2020-24</a>, in review, 2020.
+    </p>
 </li><li>
-<p class="discreet"><strong>Schalge, Bernd; Baroni, Gabriele; Haese, Barbara; Erdal, Daniel; Geppert, Gernot; <u>Saavedra, Pablo</u>; Haefliger, Vincent; Vereecken, Harry; Attinger, Sabine; Kunstmann, Harald; Cirpka, Olaf A.; Ament, Felix; Kollet, Stefan; Neuweiler, Insa; Hendricks Franssen, Harrie-Jan; Simmer, Clemens (2020)</strong>. <em>Virtual catchment simulation based on the Neckar region. World Data Center for Climate (WDCC) at DKRZ</em>. doi:<a href="https://doi.org/10.26050/WDCC/Neckar_VCS_v1">10.26050/WDCC/Neckar_VCS_v1</a> </p>
+    <p class="discreet"><strong>Schalge, Bernd; Baroni, Gabriele; Haese, Barbara; Erdal, Daniel; Geppert, Gernot; <u>Saavedra, Pablo</u>; Haefliger, Vincent; Vereecken, Harry; Attinger, Sabine; Kunstmann, Harald; Cirpka, Olaf A.; Ament, Felix; Kollet, Stefan; Neuweiler, Insa; Hendricks Franssen, Harrie-Jan; Simmer, Clemens (2020)</strong>.
+      <em>Virtual catchment simulation based on the Neckar region. World Data Center for Climate (WDCC) at DKRZ</em>.
+      doi:<a href="https://doi.org/10.26050/WDCC/Neckar_VCS_v1">10.26050/WDCC/Neckar_VCS_v1</a>
+    </p>
 </li><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, and C. Simmer </strong>: <em>An Octave/MATLAB Interface For Rapid Processing SMOS L1C Full Polarization Brightness Temperature</em>, Journal of Open Research Software <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">(JORS)</a>, 6(1) p.2., 2018, doi:<a href="http://doi.org/10.5334/jors.165">doi.org/10.5334/jors.165</a></p>
+    <p class="discreet"><strong><u>Saavedra P.</u>, and C. Simmer </strong>:
+      <em>An Octave/MATLAB Interface For Rapid Processing SMOS L1C Full Polarization Brightness Temperature</em>,
+      Journal of Open Research Software <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">(JORS)</a>, 6(1) p.2., 2018, doi:<a href="http://doi.org/10.5334/jors.165">doi.org/10.5334/jors.165</a>
+    </p>
 </li><li>
 <p class="discreet"><strong>Xie X., Evaristo R., Troemel S., <u>Saavedra P.</u> and C. Simmer</strong>: <em>Radar observation of evaporation and implications for rainfall precipitation and cooling rate estimation</em>, J. Atmos. Ocea. Tech., 2016, doi:10.1175/JTECH-D-15-0244.1.</p>
 </li><li>
@@ -44,6 +56,14 @@ caratula: images/fronts/texstudio.png
 </li></ul>
 <dl><dt>
 <h3>Proceedings:</h3>
+<ul><li>
+    <p class="discreet">
+      <strong><u>Saavedra Garfias, P.</u>, Reuder J., Bhandari A., Imaki M., Kotake N. and Kameyama Sh.</strong>:
+      <em>
+	Comparison and investigation on the lidar-measured turbulence intensities in the measurement campaign using two independent lidars.
+      </em> 2019, 41th Wind Energy Symposium, Tokyo, Japan. Japan Wind Energy Association.
+    </p>
+</li></ul>
 <ul><li>
 <p class="discreet"><strong><u>Saavedra P.</u>, Simmer C. and B. Schalge</strong>: <em>Evaluation of Modeled high Resolution Virtual Brightness Temperatures Compared to Space-borne Observations for the Neckar Catchment. </em>2016, 14th Specialist Meeting on Microwave Radiometry and Remote Sensing of the Environment (MICRORAD), Espoo,pp. 85-90, doi: 10.1109/MICRORAD.2016.7530510. (<a class="external-link" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7530510&amp;isnumber=7530484">PDF</a>)</p>
 </li></ul>
