--- a/publications.html
+++ b/publications.html
@@ -10,7 +10,7 @@ title: List of Publications
     <p class="discreet">
       <strong>Etienne Cheynet, Martin Flügge, Joachim Reuder, Jasna B. Jakobsen, Yngve Heggelund, Benny Svardal, <u>Pablo Saavedra Garfias</u>, Charlotte Obhrai, Nicolò Daniotti, Jarle Berge, Christiane Duscha, Norman Wildmann, Ingrid Husøy Onarheim, and Marte Godvik</strong>:
       <em>The COTUR project: Remote sensing of offshore turbulence for wind energy application</em>,
-      Atmospheric Measurement Techniques (AMT), <em>12, 2020. </em><a href="https://www.atmospheric-measurement-techniques.net">amt-2020-511</a>
+      Atmospheric Measurement Techniques (AMTD), <em>12, 2020. </em><a href="https://amt.copernicus.org/preprints/amt-2020-511/">amt-2020-511</a>
     </p>
   </li><li>
     <p class="discreet"><strong>Pejcic V., <u>Saavedra Garfias P.</u>, Mühlbauer K., Trömel S., and C. Simmer</strong>:
