portafolio without twitter

--- a/conferences.html
+++ b/conferences.html
@@ -2,11 +2,10 @@
 layout: withcaratula
 page: conferences
 title: Conference contributions
-vorworte: Contributions to Conference and Symposium
+vorworte: Selected Contributions on Conferences and Symposiums
 caratula: images/fronts/agumeet.png
 ---
 
-<p>This includes a list of Talks and selected Poster presentations at scientific meetings and workshops.</p>
 <h3><a name="talks"></a>Talks:</h3>
 <ul><li>
 <p class="discreet">
