--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ title: Pablo Saavedra Garfias's personal website
 <center>
 <nav class="mainmenu">
 	<ul style="align:center;">
-		<li><a href="{{'projects.html' | absolute_url}}"><button  class="fa fa-science"><span>Science</span></button></a></li>
+		<li><a href="{{'projects.html' | relative_url}}"><button  class="fa fa-science"><span>Science</span></button></a></li>
 		<li><a href="{{'codes.html' | relative_url}}"><button  class="fa fa-coding"><span>Coding</span></button></a></li>
-		<li><a href="{{'portfolio.html' | absolute_url}}"><button class="fa fa-portfolio"><span>Portfolio</span></button></a></li>
+		<li><a href="{{'portfolio.html' | relative_url}}"><button class="fa fa-portfolio"><span>Portfolio</span></button></a></li>
 		<li><a href="{{'about.html' | relative_url}}"><button  class="fa fa-about"><span>About</span></button></a></li>
 	</ul>
 </nav>
