--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,11 @@ title: List of Publications
 
 <h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
 <ul><li>
+    <p class="discreet"><strong>Schalge, B., Baroni, G., Haese, B., Erdal, D., Geppert, G., <u>Saavedra, P.</u>, Haefliger, V., Vereecken, H., Attinger, S., Kunstmann, H., Cirpka, O. A., Ament, F., Kollet, S., Neuweiler, I., Hendricks Franssen, H.-J., and Simmer, C.</strong>:
+      <em>Presentation and discussion of the high-resolution atmosphere–land-surface–subsurface simulation dataset of the simulated Neckar catchment for the period 2007–2015</em>,
+      Earth Syst. Sci. Data, doi:<a href="https://doi.org/10.5194/essd-13-4437-2021">10.5194/essd-13-4437-2021</a>, 2021.
+    </p>
+</li><li>
     <p class="discreet">
       <strong>Etienne Cheynet, Martin Flügge, Joachim Reuder, Jasna B. Jakobsen, Yngve Heggelund, Benny Svardal, <u>Pablo Saavedra Garfias</u>, Charlotte Obhrai, Nicolò Daniotti, Jarle Berge, Christiane Duscha, Norman Wildmann, Ingrid Husøy Onarheim, and Marte Godvik</strong>:
       <em>The COTUR project: Remote sensing of offshore turbulence for wind energy application</em>,
@@ -22,12 +27,7 @@ title: List of Publications
       <em>Required sampling-density of ground-based soil moisture and brightness temperature observations for calibration/validation of L-band satellite observations based on a virtual reality</em>,
       Journal Hydrology and Earth System Sciences (HESS), <a href="https://www.hydrol-earth-syst-sci.net/24/1957/2020/">doi.org/10.5194/hess-24-1957-2020</a>
     </p>
-</li><li>
-    <p class="discreet"><strong>Schalge B., J. Rihani, G. Baroni, D. Erdal, G. Geppert, V. Haefliger, B. Haese, <u>P. Saavedra</u>, I. Neuweiler, H.J. Hendricks, F. Ament, S. Attinger, O.A. Cirpka, S. Kollet, H. Kunstmann, H. Vereecken, and C. Simmer</strong>:
-      <em>Presentation and discussion of the high resolution atmosphere-land surface subsurface simulation dataset of the virtual Neckar catchment for the period 2007–2015</em>,
-      Earth Syst. Sci. Data Discuss., doi:<a href="https://doi.org/10.5194/essd-2020-24">10.5194/essd-2020-24</a>, in review, 2020.
-    </p>
-</li><li>
+  </li><li>
     <p class="discreet"><strong>Schalge, Bernd; Baroni, Gabriele; Haese, Barbara; Erdal, Daniel; Geppert, Gernot; <u>Saavedra, Pablo</u>; Haefliger, Vincent; Vereecken, Harry; Attinger, Sabine; Kunstmann, Harald; Cirpka, Olaf A.; Ament, Felix; Kollet, Stefan; Neuweiler, Insa; Hendricks Franssen, Harrie-Jan; Simmer, Clemens (2020)</strong>.
       <em>Virtual catchment simulation based on the Neckar region. World Data Center for Climate (WDCC) at DKRZ</em>.
       doi:<a href="https://doi.org/10.26050/WDCC/Neckar_VCS_v1">10.26050/WDCC/Neckar_VCS_v1</a>
