Published Cotur paper added

--- a/publications.html
+++ b/publications.html
@@ -11,11 +11,9 @@ title: List of Publications
       <em>Presentation and discussion of the high-resolution atmosphere–land-surface–subsurface simulation dataset of the simulated Neckar catchment for the period 2007–2015</em>,
       Earth Syst. Sci. Data, doi:<a href="https://doi.org/10.5194/essd-13-4437-2021">10.5194/essd-13-4437-2021</a>, 2021.
     </p>
-</li><li>
+  </li><li>
     <p class="discreet">
-      <strong>Etienne Cheynet, Martin Flügge, Joachim Reuder, Jasna B. Jakobsen, Yngve Heggelund, Benny Svardal, <u>Pablo Saavedra Garfias</u>, Charlotte Obhrai, Nicolò Daniotti, Jarle Berge, Christiane Duscha, Norman Wildmann, Ingrid Husøy Onarheim, and Marte Godvik</strong>:
-      <em>The COTUR project: Remote sensing of offshore turbulence for wind energy application</em>,
-      Atmospheric Measurement Techniques (AMTD), <em>12, 2020. </em><a href="https://amt.copernicus.org/preprints/amt-2020-511/">amt-2020-511</a>
+      <strong>Cheynet, E., Flügge, M., Reuder, J., Jakobsen, J. B., Heggelund, Y., Svardal, B., <u>Saavedra Garfias, P.</u>, Obhrai, C., Daniotti, N., Berge, J., Duscha, C., Wildmann, N., Onarheim, I. H., and Godvik, M.</strong>: <em>The COTUR project: remote sensing of offshore turbulence for wind energy application</em>, Atmos. Meas. Tech., 14, 6137–6157, doi:<a href="https://doi.org/10.5194/amt-14-6137-2021">10.5194/amt-14-6137-2021</a>, 2021.
     </p>
   </li><li>
     <p class="discreet"><strong>Pejcic V., <u>Saavedra Garfias P.</u>, Mühlbauer K., Trömel S., and C. Simmer</strong>:
