added AGU conference, imaggeo user name fixed

--- a/conferences.html
+++ b/conferences.html
@@ -8,6 +8,9 @@ caratula: images/fronts/agumeet.png
 
 <h3><a name="talks"></a>Talks:</h3>
 <ul><li>
+    <p class="discreet">
+        "Climatology of clouds containing supercooled liquid in the Western and Central Arctic".<strong> American Geophysical Union 2021, 13-17 December 2021, New Orleans, USA.</strong></p>
+        </li><li>
 <p class="discreet">
 "Estimation of Melting Layer Multi-Wavelength Attenuation by Data Fusion of Passive and Active Sensors".<strong> International Radiation Symposium 2016, 16-22 April 2016, Auckland, New Zealand.</strong></p>
 </li><li>
@@ -35,7 +38,9 @@ caratula: images/fronts/agumeet.png
 
 <h3><a name="posters"></a>Posters:</h3>
 <ul><li>
-<p class="discreet"><strong>Arctic Amplification AC3 Science Conference 2021</strong>, 25-27 November 2021, Potsdam, Germany<br /><strong>Saavedra Garfias P., and H. Kalessa-Los</strong>: <em>Linking cloud properties and Cloudnet target classification to sea ice concentration conditions in the Western Arctic. (<a title="#PP06_Pablo_Garfias_AC3_B07.pdf" class="external-link" href="{{site.PDFmiub}}/posters/#PP06_Pablo_Garfias_AC3_B07.pdf">PDF</a>)</em></p>
+    <p class="discreet"><strong>American Geophysical Union 2021</strong>, 13-17 December 2021, New Orleans, USA<br /><strong>Saavedra Garfias P., H. Kalesse-Los, et alli</strong>: <em>Classification of cloud microphysical properties as a function of sea ice concentration conditions during MOSAiC. (<a title="eLightning Poster" class="external-link" href="https://agu2021fallmeeting-agu.ipostersessions.com/Default.aspx?s=5F-9E-A0-68-9C-B2-E3-F9-90-87-E4-51-7B-4D-A2-3E">eLightning Link</a>)</em></p>
+</li><li>
+<p class="discreet"><strong>Arctic Amplification AC3 Science Conference 2021</strong>, 25-27 November 2021, Potsdam, Germany<br /><strong>Saavedra Garfias P., and H. Kalesse-Los</strong>: <em>Linking cloud properties and Cloudnet target classification to sea ice concentration conditions in the Western Arctic. (<a title="#PP06_Pablo_Garfias_AC3_B07.pdf" class="external-link" href="{{site.PDFmiub}}/posters/#PP06_Pablo_Garfias_AC3_B07.pdf">PDF</a>)</em></p>
 </li><li>
 <p class="discreet"><strong>American Geophysical Union AGU 2019</strong>, 9-13 December 2019, San Francisco, USA<br /><strong>Pejcic V., Saavedra Garfias P., Troemel S., Mühlbauer K., and C. Simmer</strong>: <em>Evaluation of Germany's network radar composite rain producs with GPM near surface precipitation estimations. (<a title="ESSOAr link" class="external-link" href="https://doi.org/10.1002/essoar.10501387.1">Pre-print</a>)</em></p>
 </li><li>
