--- a/publications.html
+++ b/publications.html
@@ -56,10 +56,9 @@ title: List of Publications
 <h3>Proceedings:</h3>
 <ul><li>
     <p class="discreet">
-      <strong><u>Saavedra Garfias, P.</u>, Reuder J., Bhandari A., Imaki M., Kotake N. and Kameyama Sh.</strong>:
-      <em>
-	Comparison and investigation on the lidar-measured turbulence intensities in the measurement campaign using two independent lidars.
-      </em> 2019, 41th Wind Energy Symposium, Tokyo, Japan. Japan Wind Energy Association.
+      <strong><u>Saavedra Garfias, P.</u>, Bhandari A., Reuder J., Imaki M., Kotake N. and Kameyama Sh.</strong>:
+      <em>Comparison and investigation on the lidar-measured turbulence intensities in the measurement campaign using two independent lidars.
+      </em>, Vol. 41, p. 261-264, 2019. 41th Wind Energy Symposium, Tokyo, Japan. Japan Wind Energy Association. (DOI: <a class="external-link" href="https://doi.org/10.11333/jweasympo.41.0_261">doi.org/10.11333/jweasympo.41.0_261</a>)
     </p>
 </li></ul>
 <ul><li>
