--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,11 @@ title: List of Publications
 
 <h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
 <ul><li>
+    <p class="discreet"><strong>Willi Schimmel, Heike Kalesse-Los, Maximilian Maahn, Teresa Vogl, Andreas Foth, <u>Pablo Saavedra Garfias</u>, and Patric Seifert</strong>:
+        <em>Identifying cloud droplets beyond lidar attenuation from vertically-pointing cloud radar observations using artificial neural networks</em>,
+        Submitted to Atmospheric Measurement Techniques, amt-2022-149, 2022.
+    </p>
+  </li><li>
     <p class="discreet"><strong>Schalge, B., Baroni, G., Haese, B., Erdal, D., Geppert, G., <u>Saavedra, P.</u>, Haefliger, V., Vereecken, H., Attinger, S., Kunstmann, H., Cirpka, O. A., Ament, F., Kollet, S., Neuweiler, I., Hendricks Franssen, H.-J., and Simmer, C.</strong>:
       <em>Presentation and discussion of the high-resolution atmosphere–land-surface–subsurface simulation dataset of the simulated Neckar catchment for the period 2007–2015</em>,
       Earth Syst. Sci. Data, doi:<a href="https://doi.org/10.5194/essd-13-4437-2021">10.5194/essd-13-4437-2021</a>, 2021.
@@ -48,10 +53,10 @@ title: List of Publications
 </li><li>
 <p class="discreet"><strong>Battaglia, A., <u>P. Saavedra</u>, T. Rose and C. Simmer</strong>: <em>Rain observations by a multi-frequency dual polarized radiometer</em>, IEEE Geo. Rem. Sens. Lett., 6(2), 354-358, 2009.</p>
 </li><li>
-<p class="discreet"><strong>Zaratti, F., R. Forno, L. Cuarita and <u>P. Saavedra</u></strong>: <em>Six years measurements of Ozono and UVR in La Paz, Bolivia</em>, Revista Boliviana de Física, No 9, pp. 48-51, 2003, ISSN 1562-3823. (in spanish) (<a title="sobofi_n9" class="internal-link" href="{{site.PDFmiub}}/papers/sobofi_n9">PDF</a>), (<a class="external-link" href="http://www.fiumsa.edu.bo/sobofi/archivos/numero9.pdf">HTML</a>).</p>
+<!-- <p class="discreet"><strong>Zaratti, F., R. Forno, L. Cuarita and <u>P. Saavedra</u></strong>: <em>Six years measurements of Ozono and UVR in La Paz, Bolivia</em>, Revista Boliviana de Física, No 9, pp. 48-51, 2003, ISSN 1562-3823. (in spanish) (<a title="sobofi_n9" class="internal-link" href="{{site.PDFmiub}}/papers/sobofi_n9">PDF</a>), (<a class="external-link" href="http://www.fiumsa.edu.bo/sobofi/archivos/numero9.pdf">HTML</a>).</p>
 </li><li>
 <p class="discreet"><strong>Ghezzi, F., <u>P. Saavedra</u>, E. Palenque and F. Zaratti</strong>: <em>Analysis of correlation between Solar activity and columnar Ozone at tropical latitudes</em>, Revista Boliviana de Física, No 8, pp. 16-22, 2002, ISSN 1562-3823. (in spanish)(<a title="sobofi_n8" class="internal-link" href="{{site.PDFmiub}}/papers/sobofi_n8">PDF</a>), (<a class="external-link" href="http://www.fiumsa.edu.bo/sobofi/archivos/numero8.pdf">HTML</a>).</p>
-</li></ul>
+</li></ul> -->
 <dl><dt>
 <h3>Proceedings:</h3>
 <ul><li>
