--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,7 @@ title: List of Publications
 <ul><li>
     <p class="discreet"><strong>Willi Schimmel, Heike Kalesse-Los, Maximilian Maahn, Teresa Vogl, Andreas Foth, <u>Pablo Saavedra Garfias</u>, and Patric Seifert</strong>:
         <em>Identifying cloud droplets beyond lidar attenuation from vertically-pointing cloud radar observations using artificial neural networks</em>,
-        Submitted to Atmospheric Measurement Techniques, amt-2022-149, 2022.
+        Submitted to Atmospheric Measurement Techniques, (Discussion) <a href="https://amt.copernicus.org/preprints/amt-2022-149/">amt-2022-149</a>, 2022.
     </p>
   </li><li>
     <p class="discreet"><strong>Schalge, B., Baroni, G., Haese, B., Erdal, D., Geppert, G., <u>Saavedra, P.</u>, Haefliger, V., Vereecken, H., Attinger, S., Kunstmann, H., Cirpka, O. A., Ament, F., Kollet, S., Neuweiler, I., Hendricks Franssen, H.-J., and Simmer, C.</strong>:
