--- a/conferences.html
+++ b/conferences.html
@@ -38,6 +38,8 @@ caratula: images/fronts/agumeet.png
 
 <h3><a name="posters"></a>Posters:</h3>
 <ul><li>
+    <p class="discreet"><strong>International Radiation Symposium 2022</strong>, 4-8 July 2022, Thessaloniki, Greece<br /><strong>Saavedra Garfias P., H. Kalesse-Los, K. Ebell</strong>: <em>Estimation of cloud radiative effects from ground-based observations in the Western Arctic. Wintertime radiative effects as function of cloud-moisture-coupling and sea ice conditions.</em> DOI: <a href="https://zenodo.org/badge/latestdoi/508826890"><img src="https://zenodo.org/badge/508826890.svg" alt="DOI"></a></p>
+</li><li>
     <p class="discreet"><strong>American Geophysical Union 2021</strong>, 13-17 December 2021, New Orleans, USA<br /><strong>Saavedra Garfias P., H. Kalesse-Los, et alii</strong>: <em>Classification of cloud microphysical properties as a function of sea ice concentration conditions during MOSAiC.</em> (<a title="eLightning Poster" class="external-link" href="https://agu2021fallmeeting-agu.ipostersessions.com/Default.aspx?s=5F-9E-A0-68-9C-B2-E3-F9-90-87-E4-51-7B-4D-A2-3E">eLightning Link</a>), DOI: <a class="external-link", href="10.1002/essoar.10509919.1">10.1002/essoar.10509919.1</a></p>
 </li><li>
 <p class="discreet"><strong>Arctic Amplification AC3 Science Conference 2021</strong>, 25-27 November 2021, Potsdam, Germany<br /><strong>Saavedra Garfias P., and H. Kalesse-Los</strong>: <em>Linking cloud properties and Cloudnet target classification to sea ice concentration conditions in the Western Arctic. (<a title="#PP06_Pablo_Garfias_AC3_B07.pdf" class="external-link" href="{{site.PDFmiub}}/posters/#PP06_Pablo_Garfias_AC3_B07.pdf">PDF</a>)</em></p>
