layout rearranges and page of codes with description to expand with click

--- a/conferences.html
+++ b/conferences.html
@@ -15,7 +15,7 @@ caratula: images/fronts/agumeet.png
 "Estimation of Melting Layer Multi-Wavelength Attenuation by Data Fusion of Passive and Active Sensors".<strong> International Radiation Symposium 2016, 16-22 April 2016, Auckland, New Zealand.</strong></p>
 </li><li>
 <p class="discreet">
-"Statistical Overview of Virtual ans SMOS Observations for the Neckar Catchment".<strong> Data Assimilation Workshop 2015, 28-29 September 2015, Garmisch-Partenkirchen, Germany.</strong></p>
+"Statistical Overview of Virtual SMOS Observations for the Neckar Catchment".<strong> Data Assimilation Workshop 2015, 28-29 September 2015, Garmisch-Partenkirchen, Germany.</strong></p>
 </li><li>
 <p class="discreet">
 "Melting layer attenuation as observed by polarimetric radar-radiometer synergistic approach".<strong>8th European Radar Conference 2014, 1-5 September 2014, Garmisch-Partenkirchen, Germany.</strong></p>
@@ -47,7 +47,9 @@ caratula: images/fronts/agumeet.png
 <p class="discreet"><strong>American Geophysical Union AGU 2019</strong>, 9-13 December 2019, San Francisco, USA<br /><strong>Pejcic V., Saavedra Garfias P., Troemel S., Mühlbauer K., and C. Simmer</strong>: <em>Evaluation of Germany's network radar composite rain producs with GPM near surface precipitation estimations. (<a title="ESSOAr link" class="external-link" href="https://doi.org/10.1002/essoar.10501387.1">Pre-print</a>)</em></p>
 </li><li>
 <p class="discreet"><strong>American Geophysical Union AGU 2019</strong>, 9-13 December 2019, San Francisco, USA<br /><strong>Saavedra Garfias P., and J. Reuder</strong>: <em>Uncertainties characterization of tropospheric profile retrieval by Bayesian inversion as compared to state-of-the-art methods from ground-based microwave radiometry. (<a title="ESSOAr link" class="external-link" href="https://doi.org/10.1002/essoar.10501335.2">Pre-print</a>)</em></p>
-</li><li>
+</li><details>
+	<summary> Click here too expand list:</summary>
+<li>
 <p class="discreet"><strong>European Geosciences Union EGU 2017</strong>, 23-28 April 2017, Vienna, Austria<br /><strong>Saavedra P., and C. Simmer</strong>: <em>Satellite Brightness Temperatures simulator for high-resolution virtual catchment. (<a title="poster_egu.pdf" class="internal-link" href="{{site.PDFmiub}}/posters/poster_egu.pdf">PDF</a>)</em></p>
 </li><li>
 <p class="discreet"><strong>IRS 2016</strong>, 16-22 April 2016, Auckland, New Zealand<br /><strong>Saavedra P.</strong>: <em>Anomalous Increasing Effect on UV Radiation by Cloudiness at a High Altitude Observatory.(<a title="PSaavedra_irs2016.pdf" class="internal-link" href="{{site.PDFmiub}}/posters/PSaavedra_irs2016.pdf">PDF</a>)</em></p>
@@ -79,4 +81,6 @@ caratula: images/fronts/agumeet.png
 <p class="discreet"><strong>10th MICRORAD</strong>, 11-14 March 2008, Florence, Italy - Specialist Meeting on Microwave Radiometry and Remote Sensing of the Environment.<br /><strong>Battaglia A.,  P. Saavedra, and C. Simmer</strong>: <em>Ground-based observations of precipitating clouds by a scanning polarimetric triple-frequency microwave radiometer. (<a title="MICRORAD08_Battaglia_etal.pdf" class="internal-link" href="resolveuid/4c046d2a5a2e8f24e5517cb82e6c49bd">PDF</a>)</em></p>
 </li><li>
 <p class="discreet"><strong>6th COPS Workshop</strong>, 27 - 29 February 2008, University of Hohenheim, Stuttgart, Germany<br /><strong>Battaglia A.,  P. Saavedra, and C. Simmer</strong>: <em>Ground-based observations of precipitating clouds by a scanning polarimetric triple-frequency microwave radiometer. (<a title="COPS6th_Battaglia_etal.pdf" class="internal-link" href="resolveuid/76c55980fe5a4a93089981a93be04640">PDF</a>)</em></p>
-</li></ul>
+</li>
+</details>
+</ul>
