--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Pablo Saavedra Garfias's personal website
 	<ul style="align:center;">
 		<li><a href="{{'projects.html' | relative_url}}"><button  class="fa fa-science"><span>Science</span></button></a></li>
 		<li><a href="{{'codes.html' | relative_url}}"><button  class="fa fa-coding"><span>Coding</span></button></a></li>
-		<li><a href="{{'portfolio.html' | relative_url}}"><button class="fa fa-portfolio"><span>Portfolio</span></button></a></li>
+		<!-- <li><a href="{{'portfolio.html' | relative_url}}"><button class="fa fa-portfolio"><span>Portfolio</span></button></a></li> -->
 		<li><a href="{{'about.html' | relative_url}}"><button  class="fa fa-about"><span>About</span></button></a></li>
 	</ul>
 </nav>
