added doi link to ACPD mosaic paper

--- a/publications.html
+++ b/publications.html
@@ -7,10 +7,10 @@ title: List of Publications
 
 <h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
 <ul><li>
-    <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in winter cloud microphysical properties ascribed to sea ice leads in the central Arctic</em>, Atmos. Chem. Phys. Discuss. <em>Submitted</em>, 2023.
+    <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in winter cloud microphysical properties ascribed to sea ice leads in the central Arctic</em>, Atmos. Chem. Phys. Discuss., DOI:<a href="https://doi.org/10.5194/egusphere-2023-623" target="_blank">10.5194/egusphere-2023-623</a>, 2023.
     </p>
     </li><li>
-    <p class="discreet"><strong>Linke, O., Quaas, J., Baumer, F., Becker, S., Chylik, J., Dahlke, S., Ehrlich, A., Handorf, D., Jacobi, C., Kalesse-Los, H., Lelli, L., Mehrdad, S., Neggers, R. A. J., Riebold, J., <u>Saavedra Garfias, P.</u>, Schnierstein, N., Shupe, M. D., Smith, C., Spreen, G., Verneuil, B., Vinjamuri, K. S., Vountas, M., and Wendisch, M.</strong>: <em>Constraints on simulated past Arctic amplification and lapse-rate feedback from observations</em>, Atmos. Chem. Phys. Discuss. <a href="https://doi.org/10.5194/acp-2022-836" target="_blank">[preprint]:10.5194/acp-2022-836 , in review</a>, 2023.
+    <p class="discreet"><strong>Linke, O., Quaas, J., Baumer, F., Becker, S., Chylik, J., Dahlke, S., Ehrlich, A., Handorf, D., Jacobi, C., Kalesse-Los, H., Lelli, L., Mehrdad, S., Neggers, R. A. J., Riebold, J., <u>Saavedra Garfias, P.</u>, Schnierstein, N., Shupe, M. D., Smith, C., Spreen, G., Verneuil, B., Vinjamuri, K. S., Vountas, M., and Wendisch, M.</strong>: <em>Constraints on simulated past Arctic amplification and lapse-rate feedback from observations</em>, Atmos. Chem. Phys. Discuss., DOI:<a href="https://doi.org/10.5194/acp-2022-836" target="_blank">[preprint]:10.5194/acp-2022-836 , in review</a>, 2023.
     </p>
   </li><li>
     <p class="discreet"><strong>Xie X., Xiao, X., He, J., <u>Saavedra Garfias, P.</u>, Li, T., Gu, S., Guo, Y.</strong>: <em>In situ observations of rain rate and precipitation microphysics over the coastal area of South China: Perspectives for satellite validation</em>, AMS Journal of Hydrometeorology, <em>Submitted</em>, 2022.
