added conference contribution from IUGG2023

--- a/conferences.html
+++ b/conferences.html
@@ -7,16 +7,24 @@ caratula: images/fronts/agumeet.png
 ---
 
 <h3><a name="talks"></a>Talks:</h3>
-<ul><li>
+<ul>
+  <li>
     <p class="discreet">
-        "Climatology of clouds containing supercooled liquid in the Western and Central Arctic".<strong> American Geophysical Union 2021, 13-17 December 2021, New Orleans, USA.</strong> DOI<a class="external-link" href="https://doi.org/10.1002/essoar.10509918.1">10.1002/essoar.10509918.1</a></p>
-        </li><li>
-<p class="discreet">
-"Estimation of Melting Layer Multi-Wavelength Attenuation by Data Fusion of Passive and Active Sensors".<strong> International Radiation Symposium 2016, 16-22 April 2016, Auckland, New Zealand.</strong></p>
-</li><li>
-<p class="discreet">
-"Statistical Overview of Virtual SMOS Observations for the Neckar Catchment".<strong> Data Assimilation Workshop 2015, 28-29 September 2015, Garmisch-Partenkirchen, Germany.</strong></p>
-</li><li>
+      "Variations of cloud properties ascribed by sea ice states in the Central and Western Arctic".<strong> International Union of Geophysics and Geodesy 2023, 12-19 July 2023, Berlin, Germany.</strong> <a class="external-link" href="https://doi.org/10.22541/essoar.169008271.12504472/v1">10.22541/essoar.169008271.12504472/v1</a></p>
+  </li>
+  <li>
+    <p class="discreet">
+      "Climatology of clouds containing supercooled liquid in the Western and Central Arctic".<strong> American Geophysical Union 2021, 13-17 December 2021, New Orleans, USA.</strong> DOI<a class="external-link" href="https://doi.org/10.1002/essoar.10509918.1">10.1002/essoar.10509918.1</a></p>
+  </li>
+  <li>
+    <p class="discreet">
+      "Estimation of Melting Layer Multi-Wavelength Attenuation by Data Fusion of Passive and Active Sensors".<strong> International Radiation Symposium 2016, 16-22 April 2016, Auckland, New Zealand.</strong></p>
+  </li>
+  <li>
+    <p class="discreet">
+      "Statistical Overview of Virtual SMOS Observations for the Neckar Catchment".<strong> Data Assimilation Workshop 2015, 28-29 September 2015, Garmisch-Partenkirchen, Germany.</strong></p>
+  </li>
+  <li>
 <p class="discreet">
 "Melting layer attenuation as observed by polarimetric radar-radiometer synergistic approach".<strong>8th European Radar Conference 2014, 1-5 September 2014, Garmisch-Partenkirchen, Germany.</strong></p>
 </li><li>
